# eibrain

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: bootstrap_deployment.py  check_deployment.py  execute_exploration.py  plan_exploration.py  sync_honjia.py
apps/body_runtime/: __init__.py  app.py  benchmark_tts.py  device_ops.py  verify_hardware.py  vision_hailo_service.py  vision_soak.py  visual_tracking_loop.py  voice_chain_benchmark.py  voice_chain_scenarios.py  voice_chain_selftest.py  voice_dialogue_loop.py  voice_provider_smoke.py  voice_streaming_adapter.py
apps/cognitive_runtime/: __init__.py  __main__.py  app.py
apps/head_runtime/: eivoice_gateway.py
apps/operator_console/: __main__.py  app.py  web.py
config/: eibrain.honjia.local.yaml  eibrain.honjia.remote.yaml  eibrain.honjia.yaml  eibrain.migrated-from-multimodality.yaml  eibrain.yaml
deploy/: install_immutable_release.sh
deploy/systemd/: eibrain-monitor.service  eibrain-vision-hailo.service  eihead-monitor.service  eihead-runtime.service
docs/: ei-hongtu-topology.md  ei-series-deployment-standard.md  eihead-cutover-checklist.md  eihead-deployment-plan.md  eihead-implementation-plan.md  eihead-migration-audit.md  eiprotocol-hardening-checklist.md  eiprotocol-v0.1-mvp.md  eiprotocol-v0.1.1-freeze.md  eiskills.md  realtime-cognitive-scheduler-audit.md
eibrain/body/: __init__.py  ear_stream.py  faster_whisper_recognizer.py  neck_fusion.py  raspbot_driver.py  realtime_audio.py  realtime_voice.py  runtime_linux.py  sherpa_streaming.py  vision_state.py  visual_target_lock.py
eibrain/cognition/: vision_realtime.py  vision_scene_graph.py  vision_voice_context.py
eibrain/infra/: config.py  deployment.py  head_client.py
eibrain/kernel/: __init__.py  bus.py  guards.py  lifecycle.py  router.py  scheduler.py
eibrain/learning/: __init__.py  adaptation.py  evaluation.py  execution.py  exploration.py  review.py
eibrain/memory/: contracts.py  head_feedback.py  scoring_compat.py  subject.py  visual_feedback.py  visual_memory.py
eibrain/protocol/: __init__.py  actions.py  capabilities.py  eiprotocol_bridge.py  events.py
eibrain/skills/: __init__.py  base.py  compiler.py  hold_attention.py  interrupt.py  listen.py  orient.py  reply.py
eibrain/state/: __init__.py  body.py  embodied.py  engagement.py  self_state.py  session.py  world.py
eibrain/verification/: __init__.py  body_checks.py
eibrain/vision/: __init__.py  minimax_cli.py  minimax_mcp.py
eibrain/voice/: readiness.py
eihead/devices/: __init__.py  audio.py  neck_servo.py
eihead/ear/: realtime.py
eihead/eivoice_runtime/: __init__.py  aec.py  asr.py  cloud_providers.py  core.py  runtime.py  transport.py  tts.py
eihead/eye/: __init__.py  adapters.py  realtime.py  scene.py  service.py  tracking.py
eihead/monitoring/: __init__.py  eivoice_runtime.py  neck.py  realtime_vision.py  voice.py  web.py
eihead/mouth/: playback.py
eihead/neck/: __init__.py  pan.py  vision_follow.py
eihead/protocol/: __init__.py  actions.py  observations.py  outcomes.py
eihead/runtime/: app.py  cli.py  http_api.py  (+1 more)
eiprotocol/: __init__.py  builders.py  catalog.py  event_routing.py  models.py  validation.py
scripts/: bootstrap-default-deployment.sh  capture-eihead-baseline.sh  check-deployment.sh  deploy-ei-release.sh  eiprotocol_conformance_report.py  export-eihead-repo.py  export-eiprotocol-repo.py  honjia_readiness_report.py
tests/: test_dependency_boundaries.py  test_repo_imports.py
(+282 files in other folders)
