[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eibrain"
version = "0.1.0"
description = "Kernel-first embodied intelligence system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "faster-whisper>=1.2.1", "sherpa-onnx==1.12.33", "smbus2>=0.5.0"]

[project.scripts]
eibrain-body = "apps.body_runtime.__main__:main"
eibrain-cognitive = "apps.cognitive_runtime.__main__:main"
eibrain-bootstrap = "apps.bootstrap_deployment:main"
eibrain-check-deployment = "apps.check_deployment:main"
eibrain-monitor = "apps.operator_console.__main__:main"
eibrain-sync-honjia = "apps.sync_honjia:main"
eibrain-verify-body = "apps.body_runtime.verify_hardware:main"
eibrain-voice-chain-selftest = "apps.body_runtime.voice_chain_selftest:main"
eibrain-vision-hailo = "apps.body_runtime.vision_hailo_service:main"
eibrain-plan-exploration = "apps.plan_exploration:main"
eibrain-execute-exploration = "apps.execute_exploration:main"
eihead-runtime = "eihead.runtime.cli:main"
eihead-verify-hardware = "eihead.runtime.cli:verify_hardware_main"

[tool.setuptools.packages.find]
include = ["eibrain*", "apps*", "eihead*", "eiprotocol*"]
exclude = ["config*", "tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
